--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "A project that retrieves and formats metadata for gooeys",
   "main": "index.js",
   "dependencies": {
+    "@alch/alchemy-sdk": "^1.2.0",
+    "dotenv": "^16.0.3",
     "fast-csv": "^4.3.6",
     "minimist": "^1.2.7",
     "node-fetch": "^3.3.0",
